target/classes/META-INF/jkube/openshift/my-app-service.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/path: /metrics
    prometheus.io/port: "9779"
    prometheus.io/scrape: "true"
  labels:
    expose: "true"
    app: my-app
    provider: jkube
    version: 1.0.0-SNAPSHOT
    group: com.example
  name: my-app
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: my-app
    provider: jkube
    group: com.example
