target/classes/META-INF/jkube/openshift/my-app-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: my-app
    provider: jkube
    version: 1.0.0-SNAPSHOT
    group: com.example
  name: my-app
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: my-app
